@@ -261,7 +261,6 @@ footer#main-footer {
     background: rgba(254, 254, 254, 0);
     border: rgba(254, 254, 254, 0);
     box-shadow: 0px 0px 0px #ffffff;
-    position: fixed;
 }
 
 /*THIS IS FOR STUDENT TESTIMONIALS*/
@@ -310,6 +309,25 @@ footer#main-footer {
     margin: auto;
 }
 
+/*change the font to smaller font for super small screens*/
+@media only screen and (max-width: 28.125em) { 
+    h2#header-major{
+        font-size: 20px;
+    }
+    h5#header-minor{
+        font-size: 10px;
+    }
+    .super-small-screen{
+        font-size: 18px;
+    }
+}
+
+/*hide search in navbar when it doesnt fit*/
+@media only screen and (max-width: 50.9375em) { 
+    .hide-when-not-fit{
+        visibility: hidden;
+    }
+}
 
 /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 @media only screen and (max-width: 40em) { 
